caching and sharing datamodule complete

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="/bower_components/angular-resource/angular-resource.js"></script>
     <script src="app/app.js"></script>
     <script src="app/books/BooksController.js"></script>
     <script src="app/books/AddBookController.js"></script>
@@ -25,6 +26,8 @@
     <script src="app/services/loggerService.js"></script>
     <script src="app/services/constantService.js"></script>
     <script src="app/services/badgeService.js"></script>
+    <script src="app/services/bookLoggerInterceptor.js"></script>
+    <script src="app/services/BooksResource.js"></script>
 </body>
 
 </html>
