--- a/public/src/index.html
+++ b/public/src/index.html
@@ -39,6 +39,8 @@
     <script src="scripts/books/BooksController.js"></script>
     <script src="scripts/books/AddBookController.js"></script>
     <script src="scripts/books/EditBookController.js"></script>
+    <script src="scripts/books/LoginController.js"></script>
+    <script src="scripts/books/RegisterController.js"></script>
 
     <script src="scripts/services/dataService.js"></script>
     <script src="scripts/services/loggerService.js"></script>
@@ -47,6 +49,7 @@
     <script src="scripts/services/bookLoggerInterceptor.js"></script>
     <script src="scripts/services/BooksResource.js"></script>
     <script src="scripts/services/currentUser.js"></script>
+    <script src="scripts/services/authentication.js"></script>
     <!-- endbuild -->
 
 </body>
