authentication setup (halfway)

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -33,14 +33,16 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <script src="scripts/app.js"></script>
 
-    <script src="scripts/books/BooksController.js"></script>
-    <script src="scripts/books/AddBookController.js"></script>
-    <script src="scripts/books/EditBookController.js"></script>
-    <script src="scripts/books/LoginController.js"></script>
-    <script src="scripts/books/RegisterController.js"></script>
+    <script src="scripts/controllers/BooksController.js"></script>
+    <script src="scripts/controllers/AddBookController.js"></script>
+    <script src="scripts/controllers/EditBookController.js"></script>
+    <script src="scripts/controllers/LoginController.js"></script>
+    <script src="scripts/controllers/RegisterController.js"></script>
+    <script src="scripts/controllers/HeaderController.js"></script>
 
     <script src="scripts/services/dataService.js"></script>
     <script src="scripts/services/loggerService.js"></script>
@@ -50,6 +52,7 @@
     <script src="scripts/services/BooksResource.js"></script>
     <script src="scripts/services/currentUser.js"></script>
     <script src="scripts/services/authentication.js"></script>
+    <script src="scripts/services/localStorage.js"></script>
     <!-- endbuild -->
 
 </body>
