--- a/public/src/index.html
+++ b/public/src/index.html
@@ -44,6 +44,7 @@
     <script src="scripts/controllers/LoginController.js"></script>
     <script src="scripts/controllers/RegisterController.js"></script>
     <script src="scripts/controllers/HeaderController.js"></script>
+    <script src="scripts/controllers/ProfileController.js"></script>
 
     <script src="scripts/services/dataService.js"></script>
     <script src="scripts/services/loggerService.js"></script>
