books read + favorite books (caching correct)

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -41,10 +41,13 @@
     <script src="scripts/controllers/BooksController.js"></script>
     <script src="scripts/controllers/AddBookController.js"></script>
     <script src="scripts/controllers/EditBookController.js"></script>
+    <script src="scripts/controllers/ViewBookController.js"></script>
     <script src="scripts/controllers/LoginController.js"></script>
     <script src="scripts/controllers/RegisterController.js"></script>
     <script src="scripts/controllers/HeaderController.js"></script>
     <script src="scripts/controllers/ProfileController.js"></script>
+    <script src="scripts/controllers/BooksReadController.js"></script>
+    <script src="scripts/controllers/FavoriteBooksController.js"></script>
 
     <script src="scripts/services/dataService.js"></script>
     <script src="scripts/services/loggerService.js"></script>
