server side auth + admin login + all users + read books modal

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -23,6 +23,8 @@
 
     <div ui-view="header"></div>
 
+    <div ui-view="summary"></div>
+
     <div ui-view="content" class="content"></div>
 
     <div ui-view="footer" class="navbar-fixed-bottom"></div>
@@ -48,6 +50,7 @@
     <script src="scripts/controllers/ProfileController.js"></script>
     <script src="scripts/controllers/BooksReadController.js"></script>
     <script src="scripts/controllers/FavoriteBooksController.js"></script>
+    <script src="scripts/controllers/UsersController.js"></script>
 
     <script src="scripts/services/dataService.js"></script>
     <script src="scripts/services/loggerService.js"></script>
